--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    margin-top: 10%;
 }
 
 .container {
@@ -10,7 +13,7 @@ body {
     grid-template-columns: repeat(16, 0fr);
     gap: 0px;
     column-gap: 0px;
-    margin-top: 20%;
+    margin-top: 5%;
 }
 
 .square {
